// Copyright 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wptdashboard;
option go_package = "generated";

import "bq_table_name.proto";
import "browser.proto";
import "engine.proto";
import "google/protobuf/timestamp.proto";
import "operating_system.proto";

// An invocation of the WPT runner in some OS+browser context.
message TestRun {
  option (gen_bq_schema.table_name) = "test_runs";

  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;

  OperatingSystem os = 3;
  string os_version_str = 4;

  Engine engine = 5;
  Browser browser = 6;
  string browser_version_str = 7;

  string wpt_hash = 8; // Full-length git commit hash.
  google.protobuf.Timestamp wpt_commit_time = 9;
}
